Bug 309976 - LastFm won`t scrobling media playing via http
Summary: LastFm won`t scrobling media playing via http
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Last.fm (other bugs)
Version First Reported In: 2.6-git
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-12 17:28 UTC by Sergey
Modified: 2013-01-27 21:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments
Amarok`s from ubuntu repo debug output (26.13 KB, text/x-log)
2012-12-08 08:58 UTC, Sergey
Details
Amarok from git-sources v2.6.0-422-gfc07990 (36.40 KB, text/x-log)
2012-12-08 09:00 UTC, Sergey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sergey 2012-11-12 17:28:42 UTC
If add to playlist any file like http://example.com/song.mp3 LastFM don`t scrobble anything. On lastfm site shows in now playing section something like "song.mp3 from Amarok", but after 5-10 secs this info will disappear. In user stats this track also not available.
But live streams, like online radio, scrobbles success (ScrobblerAdapter::trackMetadataChanged( Meta::TrackPtr track ) works fine)

Reproducible: Always

Steps to Reproduce:
1. apply your lastfm account
2. add any mp3 file to playlist via http like http://example.com/song.mp3
3. start playing
4. Check your lastfm account.
Actual Results:  
doesn`t add any stats and songs to my lastfm collection 

Expected Results:  
Have to add stats and songs to my lastfm collection 

Ubuntu 12.04-12.10 x86/amd64
Amarok up to 2.6
Comment 1 Matěj Laitl 2012-11-16 17:43:41 UTC
This is intentional. If Amarok cannot get proper meta-data from your track, (it almost always isn't able to for plain http://example.com/song.mp3 URLs) it cannot scrobble. This is mandated by Last.fm policy. Minimal set of meta-data is proper artist name and proper track title (not file name).
Comment 2 Sergey 2012-11-17 08:36:24 UTC
Amarok can get proper meta-data from track(it displays correct info in playlist) http://checky.ru/zzbU.png (screen) 
And it starts scrobble and showing info in lastfm but only 5 or 10 secs.
Comment 3 Matěj Laitl 2012-11-17 09:22:27 UTC
Then I recommend waiting for https://git.reviewboard.kde.org/r/107348/ to be merged. Please also try with both phonon-vlc and phonon-gst and report their versions.
Comment 4 Matěj Laitl 2012-11-23 11:25:13 UTC
The patch has been merged, please test now and also provide info requested in Comment #3.
Comment 5 Sergey 2012-11-30 17:19:24 UTC
I compiled Amarok from git with your latest commit and it looks like broken yet. I've already tested amarok with both phonon backends and result was the same. 
This screenshot after start playing http://checky.ru/zdm8.png
This after few seconds http://checky.ru/EL9E.png
Comment 6 Sergey 2012-12-06 13:25:01 UTC
phonon-vlc = 0.6.0-1
phonon-gst = 4:4.7.0really4.6.2-0ubuntu1
Comment 7 Edward Hades 2012-12-06 13:28:04 UTC
Info provided, resetting bug status.
Comment 8 Matěj Laitl 2012-12-06 13:39:48 UTC
Okay, so please provide debugging log:

1. Start Amarok from Konsole as `amaork --debug --nofork`
2. Prepare your song to be the only one in playlist, but don't start playing yet
3. In Konsole, View -> Edit Scrollback and Reset
4. Start playing a song in Amarok, wait for it to finish
5. Save the output, in Konsole do Edit -> Select All,  Edit -> Copy; pase into KWrite, attach here.

Please also provide exact git revision - output of `git describe` in the Amarok repository.
Comment 9 Sergey 2012-12-08 08:58:43 UTC
Created attachment 75701 [details]
Amarok`s from ubuntu repo debug output

amarok from kubuntu repository
Comment 10 Sergey 2012-12-08 09:00:01 UTC
Created attachment 75702 [details]
Amarok from git-sources v2.6.0-422-gfc07990
Comment 11 Myriam Schweingruber 2012-12-08 14:27:27 UTC
Thank you for the feedback.
Comment 12 Mayank Madan 2012-12-19 18:09:45 UTC
I can reproduce this too. I added a mp3 to playlist, played it, but i still cant get any stats to update in my lastfm collection.
Using v2.6.90-26-gbcdd84c
Comment 13 Myriam Schweingruber 2012-12-21 14:32:12 UTC
Setting status correctly.
Comment 14 Matěj Laitl 2013-01-16 21:24:52 UTC
Git commit 9ec5fa26f503dd37bc7a9f4fcb2e78bf5648bbaf by Matěj Laitl.
Committed on 16/01/2013 at 22:04.
Pushed by laitl into branch 'master'.

EngineController: fix track-in-stream detection at the end of the stream

BUGFIXES:
 * Fix scrobbling of plain files streamed over http.
FIXED-IN: 2.7

M  +1    -0    ChangeLog
M  +11   -2    src/EngineController.cpp
M  +2    -1    src/core-impl/meta/stream/Stream_p.h

http://commits.kde.org/amarok/9ec5fa26f503dd37bc7a9f4fcb2e78bf5648bbaf
Comment 15 Sergey 2013-01-16 21:35:29 UTC
Thnx for fix. I'll test it one of these days.


(In reply to comment #14)
> Git commit 9ec5fa26f503dd37bc7a9f4fcb2e78bf5648bbaf by Matěj Laitl.
> Committed on 16/01/2013 at 22:04.
> Pushed by laitl into branch 'master'.
> 
> EngineController: fix track-in-stream detection at the end of the stream
> 
> BUGFIXES:
>  * Fix scrobbling of plain files streamed over http.
> FIXED-IN: 2.7
> 
> M  +1    -0    ChangeLog
> M  +11   -2    src/EngineController.cpp
> M  +2    -1    src/core-impl/meta/stream/Stream_p.h
> 
> http://commits.kde.org/amarok/9ec5fa26f503dd37bc7a9f4fcb2e78bf5648bbaf
Comment 16 Matěj Laitl 2013-01-16 22:04:05 UTC
(In reply to comment #15)
> Thnx for fix. I'll test it one of these days.

You're welcome. Please do ASAP, because we're *that* close to tagging 2.7.
Comment 17 Sergey 2013-01-27 20:58:25 UTC
Amarok 2.7 from ubuntu - problem not fixed
Comment 18 Sergey 2013-01-27 21:09:32 UTC
Oh! Sorry, it's ok! Thnx! Good job!
Comment 19 Matěj Laitl 2013-01-27 21:10:59 UTC
(In reply to comment #18)
> Oh! Sorry, it's ok! Thnx! Good job!

Oooomph. :-)