EngineController: fix track-in-stream detection at the end of the stream

BUGFIXES:
 * Fix scrobbling of plain files streamed over http.

BUG: 309976
FIXED-IN: 2.7